--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
         <activity
             android:name=".ResidentLogin"
             android:label="@string/title_activity_resident_login"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".EvestList"
+            android:label="@string/title_activity_evest_list"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
