--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,8 +31,16 @@
             android:label="@string/title_activity_resident_login"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".EvestList"
-            android:label="@string/title_activity_evest_list"
+            android:name=".EventList"
+            android:label="@string/title_activity_event_list"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".EventPage"
+            android:label="@string/title_activity_event_page"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".RatingPage"
+            android:label="@string/title_activity_rating_page"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
