Added code for envents feedback, when RAs and RDs want to check the feedback of the events they created.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.vilma.fgcuhousing.EventManager" />
         </activity>
+        <activity
+            android:name=".EventFeedback"
+            android:label="@string/title_activity_event_feedback"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
